--- a/index.html
+++ b/index.html
@@ -6,24 +6,70 @@
     <title>คำนวณค่า AVE และ Correlation</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
+            background-color: #f4f7f6;
         }
-        table {
-            border-collapse: collapse;
+        h1 {
+            color: #333;
+        }
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
             width: 100%;
-            margin-top: 20px;
+            max-width: 600px;
         }
-        th, td {
+        label {
+            display: block;
+            margin-bottom: 10px;
+            color: #333;
+        }
+        input[type="number"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 20px;
             border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
+            border-radius: 4px;
+            font-size: 16px;
         }
-        th {
-            background-color: #f2f2f2;
+        button {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
         }
         .result {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             margin-top: 20px;
+            width: 100%;
+            max-width: 600px;
+        }
+        .result p {
+            color: #333;
+        }
+        @media (max-width: 600px) {
+            form, .result {
+                width: 90%;
+            }
         }
     </style>
 </head>
